--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ header {
 }
 .portfolio-item{
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* flex-direction: column; */
 }
 .portfolio-item .item{
     width: 360px;
@@ -138,10 +142,15 @@ header {
     float: left;
     margin-bottom: 20px;
     margin-right: 20px;
+    display: flex;
 }
+/* .overlay{
+    background-color: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),;
+} */
 .portfolio-item .item img {
     width: 100%;
     height: 100%;
+    
     border-radius: 8px;
 }
 .portfolio-item img:hover{
@@ -283,5 +292,59 @@ header {
     border: 1px solid white;
 }
 
+@media(max-width:770px){
+.menu{
+    display: none;
+}
+#header{
+    width: 100%;
+    height: 100vh;
+    background-size:fill;
+    background-image: none;
 
+}
+.portfolio-menu ul{
+display: none;
+}
+.m-img{
+    display: none;
+}
+.f-contect p{
+display: none;
+}
+.f-contect h1{
+    display: none;
+}
+.news-letter{
+    display: none;
+}
+#abot{
+    display: none;
+}
+.h-text h1{
+    font-size: 2em;
+}
+.icon i{
+    display: none;
+}
+.filter-gallery{
+    padding: 20px;
+}
+.h-text input {
+    width: 100%;
+    font-size: 30px;
+
+}
+.h-text button {
+    width: 100%;
+}
+.h-text h1{
+    width: 80%;
+}
+.member-card p{
+    width: 100%;
+    font-size: 1.5em;
+    text-align: center;
+}
+}
 
